--- a/src/styles/layout/_global.scss
+++ b/src/styles/layout/_global.scss
@@ -1,8 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Manrope&display=swap");
+
 * {
   margin: 0;
   padding: 0;
   font-size: 16px;
-  font-family: sans-serif, Arial, Helvetica;
+  font-family: "Manrope", sans-serif;
 }
 
 button {
