--- a/src/styles/layout/_hero.scss
+++ b/src/styles/layout/_hero.scss
@@ -7,7 +7,7 @@
   &__text {
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    gap: 3rem;
 
     width: 50%;
     &__heading {
@@ -37,6 +37,32 @@
           background-color: #22d497;
           border-radius: 50%;
           padding: 1rem;
+        }
+      }
+    }
+
+    &__checks {
+      display: flex;
+      gap: 2rem;
+      align-items: center;
+      &__register {
+        display: flex;
+        gap: 0.5rem;
+        &__img {
+          height: 0.9rem;
+          padding: 0.25rem;
+          background-color: #3734a9;
+          border-radius: 50%;
+        }
+      }
+      &__service {
+        display: flex;
+        gap: 0.5rem;
+        &__img {
+          height: 0.9rem;
+          padding: 0.25rem;
+          background-color: #3734a9;
+          border-radius: 50%;
         }
       }
     }
