--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,3 +3,7 @@
 @import "layout/footer";
 @import "layout/hero";
 @import "layout/company";
+@import "features/featsBlowsMind";
+@import "features/featsPayments";
+@import "features/featsPf";
+@import "features/featsTransactions";
