--- a/src/styles/features/_featsPf.scss
+++ b/src/styles/features/_featsPf.scss
@@ -88,7 +88,7 @@
           text-align: center;
           color: #757095;
         }
-        transition: transform 0.3s ease;
+        transition: transform 0.3s ease, background-color 0.3s ease;
       }
       &__connect:hover,
       &__review:hover,
