--- a/src/styles/features/_featsBlowsMind.scss
+++ b/src/styles/features/_featsBlowsMind.scss
@@ -1,7 +1,7 @@
 .feats {
   &__blowsMind {
     margin: 0 -4rem;
-    padding: 6rem 4rem;
+    padding: 6rem 4rem 8rem 4rem;
     display: flex;
     flex-direction: column;
     background-color: #c9e7f2;
