--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,3 +7,5 @@
 @import "features/featsPayments";
 @import "features/featsPf";
 @import "features/featsTransactions";
+@import "testimonials/testimonials";
+@import "statistics/statistics";
