--- a/src/styles/layout/_company.scss
+++ b/src/styles/layout/_company.scss
@@ -21,6 +21,10 @@
     &__img {
       height: 1.2rem;
       object-fit: contain;
+      transition: scale 0.3s ease;
+    }
+    &__img:hover {
+      scale: 1.08;
     }
   }
 }
