--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,3 +9,4 @@
 @import "features/featsTransactions";
 @import "testimonials/testimonials";
 @import "statistics/statistics";
+@import "blogs/blogs";
