--- a/src/styles/FAQ/_faq.scss
+++ b/src/styles/FAQ/_faq.scss
@@ -3,16 +3,20 @@
   display: flex;
   flex-direction: column;
   gap: 3rem;
+  height: 100%;
 
   &__head {
     font-size: 4rem;
     font-weight: 700;
-    width: 32rem;
+    max-width: 32rem;
+    width: 100%;
   }
   &__body {
     display: flex;
     justify-content: space-between;
     gap: 3rem;
+    flex-wrap: wrap;
+
     &__questions {
       display: flex;
       flex-direction: column;
@@ -23,7 +27,7 @@
       &__4,
       &__5 {
         transition: height 0.3s ease;
-        height: 3rem;
+        height: 4rem;
         display: block;
         overflow: hidden;
         padding: 1rem;
@@ -50,9 +54,8 @@
           }
         }
         &__body {
+          height: 100%;
         }
-      }
-      &__2 {
       }
     }
     &__moreQuest {
@@ -98,4 +101,22 @@
       }
     }
   }
+}
+
+@media (min-width: 1441px) {
+}
+
+@media (min-width: 1025px) and (max-width: 1440px) {
+}
+
+@media (min-width: 835px) and (max-width: 1024px) {
+}
+
+@media (min-width: 769px) and (max-width: 834px) {
+}
+
+@media (min-width: 481px) and (max-width: 768px) {
+}
+
+@media (max-width: 480px) {
 }
