--- a/src/styles/features/_featsBlowsMind.scss
+++ b/src/styles/features/_featsBlowsMind.scss
@@ -12,10 +12,13 @@
     }
     &__body {
       width: 35rem;
+      width: 100%;
     }
     &__icons {
       display: flex;
       gap: 2.5rem;
+      flex-wrap: wrap;
+
       &__first,
       &__second {
         width: 20rem;
@@ -62,4 +65,22 @@
       }
     }
   }
+}
+
+@media (min-width: 1441px) {
+}
+
+@media (min-width: 1025px) and (max-width: 1440px) {
+}
+
+@media (min-width: 835px) and (max-width: 1024px) {
+}
+
+@media (min-width: 769px) and (max-width: 834px) {
+}
+
+@media (min-width: 481px) and (max-width: 768px) {
+}
+
+@media (max-width: 480px) {
 }
