--- a/src/styles/features/_featsTransactions.scss
+++ b/src/styles/features/_featsTransactions.scss
@@ -1,13 +1,15 @@
 .feats {
   &__transactions {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
     &__text {
       display: flex;
       flex-direction: column;
       gap: 2rem;
-      width: 25rem;
+      max-width: 36rem;
+      width: 100%;
       &__subtitle {
         color: #3734a9;
         font-weight: 700;
@@ -21,7 +23,8 @@
       }
       &__quote {
         position: relative;
-        width: 23rem;
+        max-width: 23rem;
+        width: 100%;
         background-color: #c4c4c4;
         height: 9 rem;
         padding: 2rem;
@@ -48,6 +51,26 @@
       }
     }
     &__img {
+      width: 100%;
+      max-width: 36rem;
     }
   }
+}
+
+@media (min-width: 1441px) {
+}
+
+@media (min-width: 1025px) and (max-width: 1440px) {
+}
+
+@media (min-width: 835px) and (max-width: 1024px) {
+}
+
+@media (min-width: 769px) and (max-width: 834px) {
+}
+
+@media (min-width: 481px) and (max-width: 768px) {
+}
+
+@media (max-width: 480px) {
 }
