--- a/src/styles/layout/_hero.scss
+++ b/src/styles/layout/_hero.scss
@@ -1,15 +1,17 @@
 .hero {
   background: linear-gradient(to right, #c9e7f2, #91cfe5);
-
   display: flex;
-  padding: 7rem 4rem;
+  padding: 7rem 4rem 0;
   align-items: center;
+  justify-content: start;
+  overflow: hidden;
+
   &__text {
+    width: 37rem;
     display: flex;
     flex-direction: column;
     gap: 3rem;
 
-    width: 50%;
     &__heading {
       font-size: 4rem;
       font-weight: 800;
@@ -22,6 +24,7 @@
       display: flex;
       align-items: center;
       gap: 4rem;
+      flex-wrap: wrap;
       &__start {
         background-color: #3734a9;
         padding: 1.3rem 3rem;
@@ -55,19 +58,11 @@
       display: flex;
       gap: 2rem;
       align-items: center;
-      &__register {
-        display: flex;
-        gap: 0.5rem;
-        &__img {
-          height: 0.9rem;
-          padding: 0.25rem;
-          background-color: #3734a9;
-          border-radius: 50%;
-        }
-      }
+      &__register,
       &__service {
         display: flex;
         gap: 0.5rem;
+        align-items: center;
         &__img {
           height: 0.9rem;
           padding: 0.25rem;
@@ -79,11 +74,291 @@
   }
 
   &__img {
-    // max-width: 100%;
-    width: 50%;
-    height: 100%;
-    &__image {
-      max-width: 100%;
+    max-width: 48rem;
+    width: 100%;
+    flex-shrink: 1;
+    flex-grow: 0;
+  }
+}
+
+@media (min-width: 1441px) {
+}
+
+@media (min-width: 1025px) and (max-width: 1440px) {
+  .hero {
+    &__text {
+      max-width: 32rem;
+      gap: 2.9rem;
+
+      &__heading {
+        font-size: 3rem;
+        font-weight: 800;
+      }
+      &__body {
+        font-size: 1.3rem;
+        color: #64607d;
+      }
+      &__links {
+        gap: 3.2rem;
+        &__start {
+          padding: 1.2rem 2.9rem;
+        }
+        &__play {
+          gap: 0.9rem;
+
+          &__img {
+            height: 1.3rem;
+
+            padding: 1.2rem;
+          }
+        }
+      }
+
+      &__checks {
+        display: flex;
+        gap: 1.8rem;
+
+        &__register,
+        &__service {
+          gap: 0.4rem;
+          &__img {
+            height: 0.8rem;
+            padding: 0.23rem;
+          }
+        }
+      }
+    }
+
+    &__img {
+      max-width: 27rem;
+      flex-grow: 1;
+    }
+  }
+}
+
+@media (min-width: 835px) and (max-width: 1024px) {
+  .hero {
+    padding: 7rem 3rem 0;
+    &__text {
+      max-width: 27rem;
+      gap: 2.7rem;
+
+      &__heading {
+        font-size: 2.5rem;
+        font-weight: 800;
+      }
+      &__body {
+        font-size: 1rem;
+        color: #64607d;
+      }
+      &__links {
+        gap: 2rem;
+        &__start {
+          padding: 1rem 2.2rem;
+        }
+        &__play {
+          gap: 0.5rem;
+
+          &__img {
+            height: 1rem;
+
+            padding: 1rem;
+          }
+        }
+      }
+
+      &__checks {
+        display: flex;
+        gap: 1.5rem;
+
+        &__register,
+        &__service {
+          gap: 0.3rem;
+          &__img {
+            height: 0.6rem;
+            padding: 0.2rem;
+          }
+        }
+      }
+    }
+
+    &__img {
+      max-width: 23rem;
+      flex-grow: 1;
+    }
+  }
+}
+
+@media (min-width: 769px) and (max-width: 834px) {
+  .hero {
+    padding: 7rem 2.8rem 0;
+    &__text {
+      max-width: 23rem;
+      gap: 2.2rem;
+
+      &__heading {
+        font-size: 2.2rem;
+        font-weight: 800;
+      }
+      &__body {
+        font-size: 1rem;
+        color: #64607d;
+      }
+      &__links {
+        gap: 1.4rem;
+        &__start {
+          padding: 0.8rem 2rem;
+        }
+        &__play {
+          gap: 0.3rem;
+
+          &__img {
+            height: 0.8rem;
+
+            padding: 0.8rem;
+          }
+        }
+      }
+
+      &__checks {
+        display: flex;
+        gap: 1.2rem;
+
+        &__register,
+        &__service {
+          gap: 0.2rem;
+          &__img {
+            height: 0.6rem;
+            padding: 0.2rem;
+          }
+        }
+      }
+    }
+
+    &__img {
+      max-width: 21rem;
+      flex-grow: 1;
+    }
+  }
+}
+
+@media (min-width: 481px) and (max-width: 768px) {
+  .hero {
+    padding: 7rem 2.2rem 0;
+    flex-wrap: wrap;
+    justify-content: center;
+    &__text {
+      //   max-width: 23rem;
+      width: 100%;
+      gap: 2.2rem;
+
+      &__heading {
+        font-size: 2.2rem;
+        font-weight: 800;
+        text-align: center;
+      }
+      &__body {
+        font-size: 1rem;
+        color: #64607d;
+        text-align: center;
+      }
+      &__links {
+        justify-content: center;
+        gap: 1.4rem;
+        &__start {
+          padding: 0.8rem 2rem;
+        }
+        &__play {
+          gap: 0.3rem;
+
+          &__img {
+            height: 0.8rem;
+
+            padding: 0.8rem;
+          }
+        }
+      }
+
+      &__checks {
+        display: flex;
+        justify-content: center;
+        gap: 1.2rem;
+
+        &__register,
+        &__service {
+          gap: 0.2rem;
+          &__img {
+            height: 0.6rem;
+            padding: 0.2rem;
+          }
+        }
+      }
+    }
+
+    &__img {
+      max-width: 18rem;
+      flex-grow: 1;
+    }
+  }
+}
+
+@media (max-width: 480px) {
+  .hero {
+    padding: 7rem 1.8rem 0;
+    flex-wrap: wrap;
+    justify-content: center;
+    &__text {
+      width: 100%;
+      gap: 2.2rem;
+
+      &__heading {
+        font-size: 2rem;
+        font-weight: 800;
+        text-align: center;
+      }
+      &__body {
+        font-size: 0.9rem;
+        text-align: center;
+      }
+      &__links {
+        justify-content: center;
+        gap: 1.4rem;
+        &__start {
+          padding: 0.8rem 2rem;
+        }
+        &__play {
+          gap: 0.3rem;
+
+          &__img {
+            height: 0.8rem;
+
+            padding: 0.8rem;
+          }
+        }
+      }
+
+      &__checks {
+        display: flex;
+        justify-content: center;
+        gap: 1rem;
+
+        &__register,
+        &__service {
+          gap: 0.21rem;
+          &__img {
+            height: 0.5rem;
+            padding: 0.15rem;
+          }
+          &__text {
+            font-size: 0.9rem;
+          }
+        }
+      }
+    }
+
+    &__img {
+      max-width: 14rem;
+      flex-grow: 1;
     }
   }
 }
