--- a/src/styles/testimonials/_testimonials.scss
+++ b/src/styles/testimonials/_testimonials.scss
@@ -13,7 +13,8 @@
     font-weight: 700;
   }
   &__body {
-    width: 34rem;
+    max-width: 34rem;
+    width: 100%;
   }
   &__slider {
     display: flex;
@@ -64,4 +65,22 @@
       background-color: #e5e5e5;
     }
   }
+}
+
+@media (min-width: 1441px) {
+}
+
+@media (min-width: 1025px) and (max-width: 1440px) {
+}
+
+@media (min-width: 835px) and (max-width: 1024px) {
+}
+
+@media (min-width: 769px) and (max-width: 834px) {
+}
+
+@media (min-width: 481px) and (max-width: 768px) {
+}
+
+@media (max-width: 480px) {
 }
