Make comapny logos responsive

--- a/src/styles/layout/_company.scss
+++ b/src/styles/layout/_company.scss
@@ -16,10 +16,10 @@
     display: flex;
     flex-wrap: wrap;
     gap: 2rem;
-    justify-content: space-between;
+    justify-content: space-evenly;
 
     &__img {
-      height: 1.2rem;
+      height: 1.6rem;
       object-fit: contain;
       transition: scale 0.3s ease;
     }
@@ -37,24 +37,73 @@
 
 @media (min-width: 835px) and (max-width: 1024px) {
   .company {
-    padding: 4rem 3rem;
+    padding: 3.5rem 3rem;
+    gap: 3rem;
+    &__subhead {
+      font-size: 1.5rem;
+    }
+
+    &__list {
+      gap: 1.8rem;
+
+      &__img {
+        height: 1.3rem;
+      }
+    }
   }
 }
 
 @media (min-width: 769px) and (max-width: 834px) {
   .company {
-    padding: 4rem 2.8rem;
+    padding: 3rem 2.8rem;
+
+    gap: 2.5rem;
+    &__subhead {
+      font-size: 1.3rem;
+    }
+
+    &__list {
+      gap: 1.6rem;
+
+      &__img {
+        height: 1.3rem;
+      }
+    }
   }
 }
 
 @media (min-width: 481px) and (max-width: 768px) {
   .company {
-    padding: 4rem 2.2rem;
+    padding: 2.5rem 2.2rem;
+    gap: 2rem;
+    &__subhead {
+      font-size: 1.2rem;
+    }
+
+    &__list {
+      gap: 1.4rem;
+
+      &__img {
+        height: 1.1rem;
+      }
+    }
   }
 }
 
 @media (max-width: 480px) {
   .company {
-    padding: 4rem 1.8rem;
+    padding: 1rem 1.8rem;
+    gap: 2rem;
+    &__subhead {
+      font-size: 1.1rem;
+    }
+
+    &__list {
+      gap: 1.3srem;
+
+      &__img {
+        height: 1rem;
+      }
+    }
   }
 }
