--- a/src/styles/features/_featsPayments.scss
+++ b/src/styles/features/_featsPayments.scss
@@ -1,31 +1,27 @@
 .feats {
   &__payments {
     display: flex;
-    flex-wrap: wrap;
-    // flex-direction: column;
     align-items: center;
-    // justify-content: ;
+    justify-content: space-between;
     padding-top: 6rem;
     padding-bottom: 6rem;
 
     &__img {
       animation: bounce 1.5s ease-in-out infinite;
-      width: 100%;
-      max-width: 38rem;
+      width: 60%;
     }
     &__text {
       display: flex;
       flex-direction: column;
-      width: 100%;
-      max-width: 38rem;
+      width: 40%;
       gap: 1rem;
       &__subtitle {
         font-weight: 700;
         color: #3734a9;
       }
       &__head {
-        font-size: 3.4rem;
-        font-weight: bold;
+        font-size: 3rem;
+        font-weight: 800;
       }
       &__body {
         color: #505887;
@@ -72,25 +68,155 @@
 }
 
 @media (min-width: 835px) and (max-width: 1024px) {
-  .company {
-    padding: 4rem 3rem;
+  .feats {
+    &__payments {
+      &__img {
+        width: 60%;
+        flex-grow: 1;
+      }
+      &__text {
+        display: flex;
+        flex-direction: column;
+        width: 40%;
+        gap: 1rem;
+        &__subtitle {
+        }
+        &__head {
+          font-size: 2.8rem;
+        }
+        &__body {
+        }
+        &__line {
+        }
+        &__lists {
+          gap: 1rem;
+          &__list {
+            gap: 1rem;
+            &__check {
+              height: 1rem;
+              padding: 0.4rem;
+            }
+          }
+        }
+      }
+    }
   }
 }
 
 @media (min-width: 769px) and (max-width: 834px) {
-  .company {
-    padding: 4rem 2.8rem;
+  .feats {
+    &__payments {
+      &__img {
+        width: 60%;
+        flex-grow: 1;
+      }
+      &__text {
+        display: flex;
+        flex-direction: column;
+        width: 40%;
+        gap: 1rem;
+        &__subtitle {
+        }
+        &__head {
+          font-size: 2.4rem;
+        }
+        &__body {
+        }
+        &__line {
+        }
+        &__lists {
+          gap: 1rem;
+          &__list {
+            gap: 1rem;
+            &__check {
+              height: 1rem;
+              padding: 0.4rem;
+            }
+          }
+        }
+      }
+    }
   }
 }
 
 @media (min-width: 481px) and (max-width: 768px) {
-  .company {
-    padding: 4rem 2.2rem;
+  .feats {
+    &__payments {
+      flex-direction: column-reverse;
+      gap: 1rem;
+      &__img {
+        width: 80%;
+        flex-grow: 1;
+      }
+      &__text {
+        display: flex;
+        flex-direction: column;
+        width: 80%;
+        gap: 1rem;
+        &__subtitle {
+        }
+        &__head {
+          font-size: 2.2rem;
+        }
+        &__body {
+        }
+        &__line {
+        }
+        &__lists {
+          gap: 1rem;
+          &__list {
+            gap: 1rem;
+            &__check {
+              height: 1rem;
+              padding: 0.4rem;
+            }
+          }
+        }
+      }
+    }
   }
 }
 
 @media (max-width: 480px) {
-  .company {
-    padding: 4rem 1.8rem;
+  .feats {
+    &__payments {
+      flex-direction: column-reverse;
+      gap: 1rem;
+      &__img {
+        width: 80%;
+        flex-grow: 1;
+      }
+      &__text {
+        display: flex;
+        flex-direction: column;
+        width: 80%;
+        gap: 1rem;
+        &__subtitle {
+          font-size: 0.9rem;
+        }
+        &__head {
+          font-size: 2rem;
+        }
+        &__body {
+          font-size: 0.9rem;
+        }
+        &__line {
+        }
+        &__lists {
+          gap: 1rem;
+          &__list {
+            gap: 1rem;
+
+            &__check {
+              height: 0.9rem;
+              padding: 0.3rem;
+            }
+            &__text {
+              font-size: 0.9rem;
+            }
+          }
+        }
+      }
+    }
   }
 }
