--- a/src/styles/features/_featsBlowsMind.scss
+++ b/src/styles/features/_featsBlowsMind.scss
@@ -17,7 +17,6 @@
     &__icons {
       display: flex;
       gap: 2.5rem;
-      flex-wrap: wrap;
 
       &__first,
       &__second {
@@ -71,28 +70,290 @@
 }
 
 @media (min-width: 1025px) and (max-width: 1440px) {
+  .feats {
+    &__blowsMind {
+      margin: 0 -4rem;
+      padding: 6rem 4rem 8rem 4rem;
+
+      gap: 2rem;
+      &__head {
+        font-size: 3rem;
+        font-weight: 700;
+      }
+      &__body {
+        width: 80%;
+      }
+      &__icons {
+        display: flex;
+        gap: 2.5rem;
+
+        &__first,
+        &__second {
+          width: 20rem;
+          gap: 2rem;
+          display: flex;
+          flex-direction: column;
+          &__img {
+            width: 4rem;
+          }
+          &__head {
+            font-size: 1.2rem;
+            font-weight: 700;
+          }
+          &__body {
+          }
+        }
+        &__first:hover,
+        &__second:hover {
+          scale: 1.05;
+          background-color: lightblue;
+        }
+        &__third {
+          display: flex;
+          flex-direction: column;
+          gap: 2.5rem;
+          width: 20rem;
+          &__top,
+          &__bottom {
+            background-color: white;
+            padding: 3.2rem 2rem;
+            font-size: 1.2rem;
+            font-weight: 700;
+            transition: scale 0.2s ease-in, background-color 0.2s ease-in-out;
+          }
+        }
+      }
+    }
+  }
 }
 
 @media (min-width: 835px) and (max-width: 1024px) {
-  .company {
-    padding: 4rem 3rem;
+  .feats {
+    &__blowsMind {
+      margin: 0 -3rem;
+      padding: 6rem 3rem 8rem;
+
+      gap: 2rem;
+      &__head {
+        font-size: 3rem;
+        font-weight: 700;
+      }
+      &__body {
+        width: 80%;
+      }
+      &__icons {
+        display: flex;
+        gap: 2.5rem;
+
+        &__first,
+        &__second {
+          width: 20rem;
+          gap: 1.4rem;
+
+          &__img {
+            width: 3.2rem;
+          }
+          &__head {
+            font-size: 1.1rem;
+            font-weight: 700;
+          }
+          &__body {
+            font-size: 0.8rem;
+          }
+        }
+
+        &__third {
+          display: flex;
+          flex-direction: column;
+          gap: 2.5rem;
+          width: 20rem;
+          justify-content: space-between;
+          &__top,
+          &__bottom {
+            padding: 2.5rem 1.6rem;
+            font-size: 1rem;
+          }
+        }
+      }
+    }
   }
 }
 
 @media (min-width: 769px) and (max-width: 834px) {
-  .company {
-    padding: 4rem 2.8rem;
+  .feats {
+    &__blowsMind {
+      margin: 0 -2.8rem;
+      padding: 6rem 2.8rem 8rem;
+
+      gap: 2rem;
+      &__head {
+        font-size: 2.4rem;
+        font-weight: 700;
+      }
+      &__body {
+        width: 80%;
+      }
+      &__icons {
+        display: flex;
+        gap: 2.5rem;
+
+        &__first,
+        &__second {
+          width: 20rem;
+          gap: 1.4rem;
+
+          &__img {
+            width: 2.8rem;
+          }
+          &__head {
+            font-size: 1rem;
+            font-weight: 700;
+          }
+          &__body {
+            font-size: 0.8rem;
+          }
+        }
+
+        &__third {
+          display: flex;
+          flex-direction: column;
+          gap: 2.5rem;
+          width: 20rem;
+          justify-content: space-between;
+          &__top,
+          &__bottom {
+            padding: 2.3rem 1.3rem;
+            font-size: 0.9rem;
+          }
+        }
+      }
+    }
   }
 }
 
 @media (min-width: 481px) and (max-width: 768px) {
-  .company {
-    padding: 4rem 2.2rem;
+  .feats {
+    &__blowsMind {
+      margin: 0 -2.2rem;
+      padding: 6rem 2.2rem 8rem;
+      align-items: center;
+
+      gap: 2rem;
+      &__head {
+        font-size: 2.2rem;
+        font-weight: 700;
+        text-align: center;
+      }
+      &__body {
+        width: 80%;
+        text-align: center;
+        font-size: 0.9rem;
+      }
+      &__icons {
+        display: flex;
+        gap: 2.5rem;
+
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 80%;
+
+        &__first,
+        &__second {
+          width: 20rem;
+          gap: 1.4rem;
+          width: 85%;
+          padding: 2.8rem 1.2rem 2.2rem 1.2rem;
+
+          &__img {
+            width: 2.8rem;
+          }
+          &__head {
+            font-size: 1rem;
+            font-weight: 700;
+          }
+          &__body {
+            font-size: 0.8rem;
+          }
+        }
+
+        &__third {
+          display: flex;
+          flex-direction: row;
+          gap: 2.5rem;
+          justify-content: space-between;
+          width: 93%;
+          &__top,
+          &__bottom {
+            padding: 2.1rem 0.7rem;
+            font-size: 0.8rem;
+            width: 100%;
+          }
+        }
+      }
+    }
   }
 }
 
 @media (max-width: 480px) {
-  .company {
-    padding: 4rem 1.8rem;
+  .feats {
+    &__blowsMind {
+      margin: 0 -1.8rem;
+      padding: 6rem 1.8rem 8rem;
+      align-items: center;
+
+      gap: 2rem;
+      &__head {
+        font-size: 2rem;
+        font-weight: 700;
+        text-align: center;
+      }
+      &__body {
+        width: 80%;
+        text-align: center;
+        font-size: 0.8rem;
+      }
+      &__icons {
+        display: flex;
+        gap: 2.5rem;
+
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 80%;
+
+        &__first,
+        &__second {
+          width: 20rem;
+          gap: 1.4rem;
+          width: 85%;
+          padding: 2.5rem 1rem 2rem 1rem;
+
+          &__img {
+            width: 2.6rem;
+          }
+          &__head {
+            font-size: 0.9rem;
+          }
+          &__body {
+            font-size: 0.8rem;
+          }
+        }
+
+        &__third {
+          display: flex;
+          flex-direction: row;
+          gap: 2.5rem;
+          justify-content: space-between;
+          width: 95%;
+          &__top,
+          &__bottom {
+            padding: 1.6rem 0.6rem;
+            font-size: 0.8rem;
+            width: 100%;
+          }
+        }
+      }
+    }
   }
 }
